--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="image" property="og:image" content="https://akshithareddy1899.github.io/Analog-clock-vanilla-js/" />
+    <meta name="description" property="og:description" content="Analog clock build with vanilla JavaScript with dark and light mode included" />
+    <meta name="author" content="Akshitha Reddy" />
     <title>Analog clock</title>
 
     <link rel="stylesheet" href="style.css">
