--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="image" property="og:image" content="https://akshithareddy1899.github.io/Analog-clock-vanilla-js/" />
+    <meta name="image" property="og:image" content="https://user-images.githubusercontent.com/70577783/155840354-d9d36877-3965-477c-8788-2ae248897dbc.png" />
     <meta name="description" property="og:description" content="Analog clock build with vanilla JavaScript with dark and light mode included, styled with neomorphic effect" />
     <meta name="author" content="Akshitha Reddy" />
     <title>Analog clock</title>
